--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,26 @@
 apply plugin: 'application'
 apply plugin: 'java'
 
+mainClassName = 'com.dalet.svnstats.Main'
+
+//noinspection GroovyUnusedAssignment
+group = theGroup
+//noinspection GroovyUnusedAssignment
+version = theVersion
+//noinspection GroovyUnusedAssignment
+sourceCompatibility = theSourceCompatibility
+//noinspection GroovyAssignabilityCheck
 jar {
     manifest {
-        attributes 'Main-Class': 'com.dalet.svnstats.Main'
+        attributes 'Main-Class': mainClassName
     }
 }
 
-repositories {
-    mavenCentral()
-    mavenCentral artifactUrls: ["file://C:/users/mrabinovitch/.m2/repository/"]
+applicationDistribution.from("src/client-scripts/") {
+    into "bin"
 }
 
+//noinspection GroovyAssignabilityCheck
 dependencies {
     compile(
             [group: 'org.tmatesoft.svnkit', name: 'svnkit', version: '1.8.7'],
@@ -28,9 +37,12 @@ dependencies {
     )
 }
 
-mainClassName = 'com.dalet.svnstats.Main'
+repositories {
+    mavenCentral()
+    mavenCentral artifactUrls: ["file://C:/users/mrabinovitch/.m2/repository/"]
+}
+
 
 task wrapper(type: Wrapper) {
     gradleVersion = '2.4-rc-2'
 }
-
